# Espresso

./: .gitmodules  README.md
.github/ISSUE_TEMPLATE/: task.md
cv/: README.md
cv/cv/: package.xml
cv/cv/scripts/: get_z_estimates.py
cv/lane_detection/: CMakeLists.txt
cv/lane_detection/config/: depth_sim_30.npy  num.npy
cv/lane_detection/launch/: lane_detection_server.launch
cv/lane_detection/src/: depth_sensing.py  lane_detection_inference.py  lane_viz.py  scan.cpp
cv/pothole_detection/launch/: pothole_detection_server.launch
description/: CMakeLists.txt  package.xml
description/config/: cartographer.lua
description/launch/: IGVC.launch  cartographer.launch  rviz.launch  simulate.launch  spawn.launch  state_publisher.launch
description/rover_model/launch/: display.launch  gazebo.launch
description/rover_model/meshes/: base_link.STL  caster_link.STL  chassis_link.STL  gps_link.STL  imu_link.STL  leftwheel_link.STL  rightwheel_link.STL  stand_link.STL  zed_link.STL
description/rover_model/urdf/: constants.xacro  espresso.csv  espresso.urdf.xacro  espresso_old.urdf.xacro  plugins.gazebo.xacro  stand_link.urdf.xacro  wheels.urdf.xacro
description/rviz/: espresso.rviz
description/src/: poor_mans_scheduler.py  scheduler.py  ssh_test.py
misc/teleop_twist_keyboard/: README.md
motor/: README.md
nav/filter_lidar_data/: CMakeLists.txt
nav/load_waypoints/: CMakeLists.txt  package.xml
odom/: CMakeLists.txt  README.md  package.xml
odom/config/: navsat.yaml  odom_global.yaml  odom_local.yaml
worlds/: README.md
(+25 files in other folders)
