<?xml version="1.0"?>
<package format="2">
  <name>description</name>
  <version>0.0.0</version>
  <description>The description package</description>

  <maintainer email="ivytan@todo.todo">ivytan</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>stereo_image_proc</depend>
  <depend>rtabmap_ros</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
